--- a/style.css
+++ b/style.css
@@ -371,9 +371,10 @@ footer {
     width: 22px;
     height: 22px;
   }
- .contents{
-   flex-direction: column;
- }
+  .contents{
+    flex-direction: column;
+    align-items: center;
+  }
  .contents .right{
   margin-left:160px;
  }
